<package>
  <name>qglv_extras</name>
  <version>0.1.3</version>
  <description>
    Methods and objects for working with or on top of the qglveiwer framework. 
  </description>
  <url type="repository">https://github.com/stonier/qglv_toolkit</url>
  <url type="bugtracker">https://github.com/stonier/qglv_toolkit/issues</url>
  <license>BSD</license>
  <maintainer email="stonier@yujinrobot.com">Daniel Stonier</maintainer>
  <author>Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>cmake_modules</build_depend>
  <build_depend>ecl_build</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>libqglviewer-qt4-dev</build_depend>
  <build_depend>sophus</build_depend>
  <build_depend>qglv_opengl</build_depend>

  <run_depend>ecl_build</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>libqglviewer-qt4</run_depend>
  <run_depend>sophus</run_depend>
  <run_depend>qglv_opengl</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
