<package>
  <name>qglv_gallery</name>
  <version>0.1.1</version>
  <description>
    Example programs from qglviewer.
  </description>
  <url type="repository">https://github.com/stonier/qglv_toolkit</url>
  <url type="bugtracker">https://github.com/stonier/qglv_toolkit/issues</url>
  <license>BSD</license>
  <maintainer email="stonier@yujinrobot.com">Daniel Stonier</maintainer>
  <author>Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>libqglviewer-qt4-dev</build_depend>

  <run_depend>libqglviewer-qt4</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
