<package>
  <name>qglv_opencv</name>
  <version>0.1.6</version>
  <description>
    Qt, QGLViewer and Opencv.
  </description>
  <url type="repository">https://github.com/stonier/qglv_toolkit</url>
  <url type="bugtracker">https://github.com/stonier/qglv_toolkit/issues</url>
  <license>BSD</license>
  <maintainer email="stonier@yujinrobot.com">Daniel Stonier</maintainer>
  <author>Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>cmake_modules</build_depend>
  <build_depend>ecl_build</build_depend>
  <build_depend>ecl_command_line</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>libqt4-dev</build_depend>

  <run_depend>ecl_build</run_depend>
  <run_depend>ecl_command_line</run_depend>
  <run_depend>libqt4</run_depend>
  <run_depend>libopencv-dev</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
