<package>
  <name>qglv_opengl</name>
  <version>0.1.5</version>
  <description>
    Drawing related methods restricted to only the opengl (gl/glu/glut) dependencies.
  </description>
  <url type="repository">https://github.com/stonier/qglv_toolkit</url>
  <url type="bugtracker">https://github.com/stonier/qglv_toolkit/issues</url>
  <license>BSD</license>
  <maintainer email="stonier@yujinrobot.com">Daniel Stonier</maintainer>
  <author>Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>cmake_modules</build_depend>
  <build_depend>ecl_build</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>glut</build_depend>
  <build_depend>libglew-dev</build_depend>
  <build_depend>libxi-dev</build_depend>   <!-- glut library -->
  <build_depend>libxmu-dev</build_depend>  <!-- glut library -->
  <build_depend>opengl</build_depend>
  <build_depend>sophus</build_depend>

  <run_depend>ecl_build</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>glut</run_depend>
  <run_depend>libglew-dev</run_depend>
  <run_depend>libxi-dev</run_depend>   <!-- glut library -->
  <run_depend>libxmu-dev</run_depend>  <!-- glut library -->
  <run_depend>opengl</run_depend>
  <run_depend>sophus</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
