<?xml version="1.0"?>
<package>
  <name>qglv_toolkit</name>
  <version>0.1.2</version>
  <description>
    Qt, QGLViewer, OpenGL, GLEW, GLUT and some extensions for using with robotics experiments.
  </description>
  <url type="repository">https://github.com/stonier/qglv_toolkit</url>
  <url type="bugtracker">https://github.com/stonier/qglv_toolkit/issues</url>
  <license>BSD</license>
  <maintainer email="stonier@yujinrobot.com">Daniel Stonier</maintainer>
  <author>Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>qglv_opengl</run_depend>
  <run_depend>qglv_extras</run_depend>
  <run_depend>qglv_opencv</run_depend>
  <run_depend>qglv_pcl</run_depend>
  <run_depend>qglv_gallery</run_depend>
  <export>
    <metapackage/>
  </export>
</package>
