<package>
  <name>qglv_viewers</name>
  <version>0.1.0</version>
  <description>
    Configuring qglviewers in a way that is suitable for most of our robotics experiments.
  </description>
  <url type="repository">https://github.com/stonier/qglv_toolkit</url>
  <url type="bugtracker">https://github.com/stonier/qglv_toolkit/issues</url>
  <license>BSD</license>
  <maintainer email="stonier@yujinrobot.com">Daniel Stonier</maintainer>
  <author>Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>ecl_build</build_depend>

  <run_depend>ecl_build</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
